Сборщик теперь не падает

--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sed dolor recusandae placeat voluptate, expedita numquam veritatis quisquam qui explicabo, accusamus rerum quasi dolorum, fuga sit nobis neque eos sequi.
+	<header class="page-header">
+		<div class="page-header__logo">
+			<img src="img/logotype-white-mobile.svg" width="75" height="22">
+		</div>
+		<nav class="main-nav">
+			<div class="main-nav__wrapper">
+				<button class="toggle"></button>
+				<ul class="main-nav__items">
+					<li class="main-nav__item main-nav__item--active"><a href="#">Главная</a></li>
+					<li class="main-nav__item"><a href="#">Фотографии</a></li>
+					<li class="main-nav__item"><a href="#">Конкурс</a></li>
+					<li class="main-nav__item"><a href="#">Html Academy</a></li>
+				</ul>
+			</div>
+		</nav>
+
+
+
+		
+
+
+
+	</header>
 	
 	<script src="js/libs.min.js"></script>
 	<script src="js/common.js"></script>
