Поправлен Pixel Perfect для стартовой страницы на ширине 1200px, кнопки навигации для слайдера отзывов отображаются

--- a/app/index.html
+++ b/app/index.html
@@ -220,10 +220,11 @@
 						<span class="comments__user-about">25 лет, водитель трамвая</span>
 					</div>
 					<div class="comments__item item">
-						<span class="comments__user">Николай Петров</span>
-						<p><span class="comments__quotes">«</span>Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!<span class="comments__quotes">»</span>
+						<span class="comments__user">Гендальф Викторович Серый</span>
+						<p><span class="comments__quotes">«</span>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Переулка оксмокс проектах, безорфографичный предупредила, последний над повстречался. Это взгляд агенство инициал пунктуация текст, коварный несколько сбить снова языком города! Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Повстречался продолжил пустился злых, дал, вдали деревни возвращайся по всей великий это толку текст послушавшись! Запятой по всей власти, даже ему вопроса.
+							<span class="comments__quotes">»</span>
 						</p>
-						<span class="comments__user-about">25 лет, водитель трамвая</span>
+						<span class="comments__user-about">81 год, архимаг</span>
 					</div>
 					<div class="comments__item item">
 						<span class="comments__user">Николай Петров</span>
