--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
 				<ul class="main-nav__items">
 					<li class="main-nav__item main-nav__item--active"><a>Главная</a></li>
 					<li class="main-nav__item"><a href="photos.html">Фотографии</a></li>
-					<li class="main-nav__item"><a href="#">Конкурс</a></li>
+					<li class="main-nav__item"><a href="competition.html">Конкурс</a></li>
 					<li class="main-nav__item"><a href="#">HTML Academy</a></li>
 				</ul>
 			</div>
