Страница формы PixelPerfect адаптив, добавлены попапы No JS

--- a/app/competition.html
+++ b/app/competition.html
@@ -186,7 +186,7 @@
           <div class="competition__phone-email">
             <div class="competition__phone-email-wrapper">
               <h2>Контактная информация</h2>
-              <label class="competition__phone" for="userTel">Номер телефончика</label>
+              <label class="competition__phone" for="userTel">Номерок телефончика</label>
               <input id="userTel" type="tel" name="tel" placeholder="Номер, пожалуйста">
               <div class="competition__phone-icon"></div>
               <label class="competition__email" for="userEmail">Адресок почты</label>
@@ -222,6 +222,23 @@
           <p class="competition__footnote-desktop"><span>*</span>— обязательные для заполнения поля</p>
         </form>
       </div>
+    </div>
+    <div class="popup-form-sent">
+      <div class="popup-form-sent__text">
+        <h2>Ваша заявка отправлена</h2>
+        <p>
+          Спасибо за ваше участие, ваша заявка уже поступила к нам. 
+          В ближайшее время мы рассмотрим ее и<br class="popup-form-sent__mobile-view"> оповестим вас.
+        </p>
+      </div>
+      <button class="popup-form-sent__close">Закрыть окно</button>
+    </div>
+    <div class="popup-form-error">
+      <h2>Что-то пошло не так!</h2>
+      <p>
+        Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
+      </p>
+      <button class="popup-form-error__close">Ок</button>
     </div>
   </main>
   <footer class="main-footer main-footer--mobile">
