--- a/app/competition.html
+++ b/app/competition.html
@@ -223,7 +223,7 @@
         </form>
       </div>
     </div>
-    <div class="popup-form-sent">
+    <div class="popup-form-sent popup-form-sent--hidden">
       <div class="popup-form-sent__text">
         <h2>Ваша заявка отправлена</h2>
         <p>
@@ -233,7 +233,7 @@
       </div>
       <button class="popup-form-sent__close">Закрыть окно</button>
     </div>
-    <div class="popup-form-error">
+    <div class="popup-form-error popup-form-error--hidden">
       <h2>Что-то пошло не так!</h2>
       <p>
         Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
