Конфликт owl carousel с анимацией css

--- a/app/index.html
+++ b/app/index.html
@@ -120,9 +120,9 @@
 				<button class="main-nav__toggle"></button>
 				<ul class="main-nav__items">
 					<li class="main-nav__item main-nav__item--active"><a>Главная</a></li>
-					<li class="main-nav__item"><a href="photos.html">Фотографии</a></li>
-					<li class="main-nav__item"><a href="competition.html">Конкурс</a></li>
-					<li class="main-nav__item"><a href="#">HTML Academy</a></li>
+					<li class="main-nav__item"><a class="main-nav__link" href="photos.html">Фотографии</a></li>
+					<li class="main-nav__item"><a class="main-nav__link" href="competition.html">Конкурс</a></li>
+					<li class="main-nav__item"><a class="main-nav__link" href="#">HTML Academy</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -254,7 +254,7 @@
 				</tr>
 			</table>
 		</section>
-		<section class="price">
+		<section class="price"> <!-- слайдер таблицы для моб. версии -->
 			<div class="price__slider-wrapper">
 				<div class="price__slider owl-carousel">
 					<div class="price__standard">
@@ -357,7 +357,8 @@
 	</footer>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script src="js/libs.min.js"></script>
-	<script src="js/common.js"></script>
+	<script src="js/slider.js"></script>
 	<script src="js/map.js"></script>
+	<script src="js/common.js"></script>
 </body>	
 </html>
