Удален спрйт svg. Поправлены пути изображений.

--- a/app/index.html
+++ b/app/index.html
@@ -133,18 +133,15 @@
 				<a class="download-app__btn" href="#">Скачать приложение</a>
 				<div class="download-app__icons">
 					<a href="https://itunes.apple.com/us/genre/ios/id36?mt=8" class="download-app__apple">
-						<svg class="download-app__apple-logo">
-							<use xlink:href="img/sprite/symbols.svg#Apple"></use>
+						<svg class="download-app__apple-logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46.21 56.75"><title>Apple</title><path d="M38.59,30.15a12.54,12.54,0,0,0,7.62,11.48,31,31,0,0,1-3.93,8.07c-2.37,3.46-4.82,6.9-8.69,7s-5-2.25-9.37-2.25-5.7,2.18-9.3,2.32S8.36,53,6,49.56c-4.87-7-8.6-19.91-3.6-28.59a13.9,13.9,0,0,1,11.74-7.11c3.67-.07,7.13,2.47,9.37,2.47s6.44-3,10.87-2.6a13.26,13.26,0,0,1,10.38,5.63c-0.27.17-6.2,3.62-6.13,10.8M31.45,9.06A12.5,12.5,0,0,0,34.4,0,12.72,12.72,0,0,0,26,4.3c-1.84,2.12-3.44,5.52-3,8.78,3.18,0.25,6.44-1.62,8.42-4" transform="translate(0)" style="fill:#fff"/>
 						</svg>
 					</a>
 					<a href="https://play.google.com/store?hl=en" class="download-app__android">
-						<svg class="download-app__android-logo">
-							<use xlink:href="img/sprite/symbols.svg#Android"></use>
+						<svg class="download-app__android-logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42.08 47.04"><title>Android</title><path d="M34.14,14H7.94c0,0.11,0,.22,0,0.33V33.1a3.6,3.6,0,0,0,3.32,3.63v7.43a2.88,2.88,0,0,0,5.77,0V36.74h8.06v7.42a2.89,2.89,0,0,0,5.77,0V36.72a3.6,3.6,0,0,0,3.32-3.63V14.34C34.16,14.23,34.15,14.12,34.14,14Z" transform="translate(0 0)" style="fill:#a4c639"/><path id="c-4-9-2-9-2-9" d="M2.89,15.68h0a2.89,2.89,0,0,1,2.89,2.88V30.94a2.89,2.89,0,0,1-2.89,2.89h0A2.89,2.89,0,0,1,0,30.94V18.56A2.88,2.88,0,0,1,2.89,15.68Z" transform="translate(0 0)" style="fill:#a4c639"/><path id="c-4-1-7-3-8-4" d="M39.2,15.68h0a2.88,2.88,0,0,1,2.89,2.88V30.94a2.88,2.88,0,0,1-2.89,2.89h0a2.88,2.88,0,0,1-2.88-2.89V18.56A2.88,2.88,0,0,1,39.2,15.68Z" transform="translate(0 0)" style="fill:#a4c639"/><path d="M8,12h26a10.47,10.47,0,0,0-3.19-7.27l2.45-4.23A0.31,0.31,0,0,0,33.2,0a0.3,0.3,0,0,0-.41.11L30.42,4.26A16.11,16.11,0,0,0,21,.86h0a16.39,16.39,0,0,0-9.37,3.4L9.3,0.15a0.3,0.3,0,0,0-.53.3l2.44,4.23A10.48,10.48,0,0,0,8,12ZM25.32,6.8a1.49,1.49,0,0,1,3,0h0a1.49,1.49,0,0,1-3,0h0Zm-11.14,0a1.49,1.49,0,0,1,3,0h0a1.49,1.49,0,0,1-3,0h0Z" transform="translate(0 0)" style="fill:#a4c639"/>
 						</svg>
 					</a>
 					<a href="https://www.microsoft.com/ru-RU/store/apps?rtc=1" class="download-app__windows">
-						<svg class="download-app__windows-logo">
-							<use xlink:href="img/sprite/symbols.svg#Windows"></use>
+						<svg class="download-app__windows-logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43.92 41.99"><title>Windows2</title><path id="path5058" d="M20.87,20H0V0H20.87V20Z" style="fill:#f05423"/><path id="path5060" d="M43.92,20H23V0H43.92V20Z" style="fill:#84c441"/><path id="path5062" d="M20.87,42H0V22H20.87V42Z" style="fill:#2dabe2"/><path id="path5064" d="M43.92,42H23V22H43.92V42Z" style="fill:#f9bc15"/>
 						</svg>
 					</a>
 				</div>
